<resources>
    <string name="app_name">Catpanion</string>
    <string name="login">Login</string>
    <string name="desc_catpanionlogo">CatpanionLogo</string>
    <string name="email">Email:</string>
    <string name="email1">Email</string>
    <string name="password">Password:</string>
    <string name="password1">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember me?</string>
    <string name="loginBTN">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_link">Sign up</string>
    <string name="signupBTN">Signup</string>
    <string name="signup">Signup</string>
    <string name="already_a_user">Already a user?</string>
    <string name="name">Name:</string>
    <string name="name1">Name</string>
    <string name="address">Address:</string>
    <string name="address1">Address</string>
    <string name="phone_number">Phone Number:</string>
    <string name="phone_number1">Phone Number</string>
    <string name="done">Done</string>
    <string name="fill_up">Fill-up</string>
    <string name="desc_userlogo">UserLogo</string>
    <string name="desc_quick_tips">Quick Tips</string>
    <string name="nameofCat">Name:</string>
    <string name="catage">Age:</string>
    <string name="no_heart">No heart</string>
    <string name="quicksurvey">Quick Survey!</string>
    <string name="quicksurvey_ins">Please be honest with all of your answers.</string>
    <string name="qs1">Are you over 18 years old?</string>
    <string name="qs2">Are you willing to do trainings on how to take more care of the cats?</string>
    <string name="qs3">Does your house/ apartment/ condo allow having pets?</string>
    <string name="c_passqs">Congrats!</string>
    <string name="m2">You meet all the basic requirements needed.

You can now proceed to look for pets you wanted to adopt.</string>
    <string name="CatName1">Popoy</string>
    <string name="CatAge1">1 year</string>
    <string name="catName2">Nero</string>
    <string name="catAge2">1 month</string>
    <string name="did_you_know">DID YOU KNOW?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_help">Help</string>
    <string name="nav_about">About</string>
    <string name="nav_logout">Logout</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="Message">Messages</string>
    <string name="HomeButton">Home</string>
    <string name="Search">SearchButton</string>
    <string name="Places">TextPlaces</string>
    <string name="FavoritesButton">Favorites</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="username">Username:</string>
    <string name="username1">Username</string>
    <string name="set_image_of_user">Set image of User</string>

    <string name="userName"></string>
    <string name="userPhone"></string>
    <string name="userAddr"></string>
    <string name="gender">Gender:</string>
    <string name="isMale">Male</string>
    <string name="location">Location:</string>
    <string name="cat_loc">Taguig City</string>
    <string name="catColor">Bi-color</string>
    <string name="coat_color_and_pattern">Coat Color and Pattern</string>
    <string name="yes">Yes</string>
    <string name="spayORNeu">Spayed/Neutered</string>
    <string name="proof_document_s">Proof Document/s</string>
    <string name="rabies_vaccine">Rabies Vaccine</string>
    <string name="adopt_me">Adopt Me</string>
    <string name="nav_search">Search</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_places">Places</string>
</resources>