<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_beige"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="201dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/desc_catpanionlogo"
        app:srcCompat="@drawable/catpanion_logo" />

    <!-- Login Start -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/login"
        android:textColor="@color/_black"
        android:textSize="25sp" />
    <!-- Email -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/quicksand_book"
        android:text="@string/email"
        android:textColor="@color/_black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:elevation="10dp"
        android:background="@drawable/custom_textfield"
        android:fontFamily="@font/quicksand_book"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:hint="@string/email1"
        android:textColor="@color/_beige"
        android:textColorHint="@color/_hint_Darkbg"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"
        android:autofillHints="" />

    <!-- Password -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/quicksand_book"
        android:text="@string/password"
        android:textColor="@color/_black"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:elevation="10dp"
        android:background="@drawable/custom_textfield"
        android:fontFamily="@font/quicksand_book"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/password1"
        android:textColor="@color/_beige"
        android:textColorHint="@color/_hint_Darkbg"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:autofillHints="" />

    <!-- Forgot Password? -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/quicksand_book"
        android:text="@string/forgot_password"
        android:textColor="#00695C"
        android:textSize="12sp" />

    <!-- End of Login Edit Text -->

    <!-- Remember me? -->
    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/quicksand_book"
        android:minHeight="48dp"
        android:text="@string/remember_me"
        android:textColor="#616161"
        tools:ignore="TextContrastCheck" />

    <!-- Login Button -->
    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/loginBTN"
        android:textColor="@color/black"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/quicksand_book"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/_black"
        android:textSize="15sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/quicksand_book"
        android:text="@string/sign_up_link"
        android:textColor="#00695C"
        android:textSize="15sp"
        />

</LinearLayout>