<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_beige"
    android:orientation="vertical"
    tools:context=".SignUp">

    <!-- Logo -->

    <!-- Signup Start -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/desc_catpanionlogo"
        app:srcCompat="@drawable/catpanion_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/signup"
        android:textColor="@color/_black"
        android:textSize="25sp" />

    <!-- Username
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/quicksand_book"
        android:text="@string/username"
        android:textColor="@color/_black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:elevation="10dp"
        android:background="@drawable/custom_textfield"
        android:fontFamily="@font/quicksand_book"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:hint="@string/username1"
        android:textColor="@color/_beige"
        android:textColorHint="@color/_hint_Darkbg"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        tools:ignore="RtlSymmetry" />
        -->

    <!-- Email -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/quicksand_book"
        android:text="@string/email"
        android:textColor="@color/_black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:elevation="10dp"
        android:background="@drawable/custom_textfield"
        android:fontFamily="@font/quicksand_book"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:hint="@string/email1"
        android:textColor="@color/_beige"
        android:textColorHint="@color/_hint_Darkbg"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        tools:ignore="RtlSymmetry" />

    <!-- Password -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/quicksand_book"
        android:text="@string/password"
        android:textColor="@color/_black"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:elevation="10dp"
        android:background="@drawable/custom_textfield"
        android:fontFamily="@font/quicksand_book"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:layout_marginBottom="40dp"
        android:hint="@string/password1"
        android:textColor="@color/_beige"
        android:textColorHint="@color/_hint_Darkbg"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:autofillHints=""
        tools:ignore="RtlSymmetry" />



    <!-- End of Signup Edit Text -->

    <!-- Signup Button -->

    <Button
        android:id="@+id/signUpBTN"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/quicksand_bold"
        android:layout_marginBottom="30dp"
        android:background="@drawable/custom_button"
        android:text="@string/signupBTN"
        android:textColor="@color/black"
        android:onClick="toSignupDetails"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/quicksand_book"
        android:text="@string/already_a_user"
        android:textColor="@color/_black"
        android:textSize="15sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/quicksand_book"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="toLogin"
        android:text="@string/login"
        android:textColor="#00695C"
        android:textSize="15sp" />

    <ProgressBar
        android:id="@+id/progressbar_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/_green"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:visibility="invisible"
        android:layout_marginTop="-10dp"
        />

</LinearLayout>