<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_beige"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/quicksurvey"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/_black"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/quicksurvey_ins"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/_black"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/_black"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/qs1"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/_beige"
            android:textSize="15sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:buttonTint="@color/_beige"
                android:fontFamily="@font/quicksand_bold"
                android:text="Yes"
                android:textAllCaps="false"
                android:textColor="@color/_beige"
                android:textSize="15sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:buttonTint="@color/_beige"
                android:fontFamily="@font/quicksand_bold"
                android:text="No"
                android:textAllCaps="false"
                android:textColor="@color/_beige"
                android:textSize="15sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/qs2"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/_beige"
            android:textSize="15sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:buttonTint="@color/_beige"
                android:fontFamily="@font/quicksand_bold"
                android:text="Yes"
                android:textAllCaps="false"
                android:textColor="@color/_beige"
                android:textSize="15sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:buttonTint="@color/_beige"
                android:fontFamily="@font/quicksand_bold"
                android:text="No"
                android:textAllCaps="false"
                android:textColor="@color/_beige"
                android:textSize="15sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/qs3"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/_beige"
            android:textSize="15sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:buttonTint="@color/_beige"
                android:fontFamily="@font/quicksand_bold"
                android:text="Yes"
                android:textAllCaps="false"
                android:textColor="@color/_beige"
                android:textSize="15sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="30dp"
                android:buttonTint="@color/_beige"
                android:fontFamily="@font/quicksand_bold"
                android:text="No"
                android:textAllCaps="false"
                android:textColor="@color/_beige"
                android:textSize="15sp" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/quicksand_bold"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_button"
        android:text="@string/done"
        android:textColor="@color/black"
        />

</LinearLayout>